# cmd/studio-api/main.go
@@ -269,7 +269,7 @@ func main() {
 		if proxyErr != nil {
 			log.Fatal(proxyErr)
 		}
-		for _, path := range []string{"/v1/studio/sdk/acl.list", "/v1/studio/sdk/connectors.get", "/v1/studio/sdk/connectors.list", "/v1/studio/sdk/namespaces.list", "/v1/studio/sdk/reports.get", "/v1/studio/sdk/reports.list"} {
+		for _, path := range []string{"/v1/studio/sdk/acl.list", "/v1/studio/sdk/connectors.get", "/v1/studio/sdk/connectors.list", "/v1/studio/sdk/namespaces.get", "/v1/studio/sdk/namespaces.list", "/v1/studio/sdk/reports.get", "/v1/studio/sdk/reports.list"} {
 			mux.Handle(path, nativeSDK)
 		}
 		if loginOAuth != nil {
